--- a/blog/app/views/articles/_form.html.erb
+++ b/blog/app/views/articles/_form.html.erb
@@ -15,20 +15,22 @@
   </div>
 <% end %>
 
-<p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+<%= form_for ([@article, @article.comments.build]) do |f| %>
+  <p>
+    <%= f.label :commenter %><br>
+    <%= f.text_field :commenter %>
   </p>
 
   <p>
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
+    <%= f.label :body %><br>
+    <%= f.text_area :body %>
   </p>
 
   <p>
-    <%=f.submit %>
+    <%= f.submit %>
   </p>
 
-<% end %>
+  <% end %>
 
 # <%= link_to 'Back', articles_path %>
+
