--- a/blog/app/views/articles/show.html.erb
+++ b/blog/app/views/articles/show.html.erb
@@ -1,18 +1,30 @@
+<p>
+  <strong>Title:</strong>
+  <%= @article.title %>
+</p>
+
+<p>
+  <strong>Text:</strong>
+  <%= @article.text %>
+</p>
+
+<h2>Comments</h2>
+<%= render @article.comments %>
+
+<h2>Add a comment:</h2>
+<%= form_for([@article, @article.comments.build]) do |f| %>
   <p>
-    <strong>Title:</strong>
-    <%= @article.title %>
+    <%= f.label :commenter %><br>
+    <%= f.text_field :commenter %>
   </p>
-
   <p>
-    <strong>Text:</strong>
-    <%= @article.text %>
+    <%= f.label :body %><br>
+    <%= f.text_area :body %>
   </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
 
-  <h2>Comments</h2>
-  <%= render @article.comments %>
-
-  <h2>Add a comment:</h2>
-  <%= render 'comments/form' %>
-
-<%= link_to 'Edit Article', edit_article_path(@article) %>
+<%= link_to 'Edit Article', edit_article_path(@article) %> |
 <%= link_to 'Back to Articles', articles_path %>
