--- a/blog/app/views/articles/edit.html.erb
+++ b/blog/app/views/articles/edit.html.erb
@@ -9,18 +9,17 @@
   <div id="error_explanation">
     <h2>
       <%= pluralize(@article.errors.count, "error") %>
-      prohibited
-        this article from being saved:
+      prohibited this article from being saved:
     </h2>
     <ul>
       <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
+        <li><%= msg %></li>
       <% end %>
     </ul>
   </div>
 <% end %>
 
-<p>
+  <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </p>
